# theAppThatLetsUsProcessToomersCornerBeingRolled

./: .gitignore  Canny.hs  Gemfile  README.md  Vagrantfile  bootstrap  compare.sh  controller.sh  demo_controller.sh  detectWhite.hs  grab.sh  random.sh  scrape.sh  testing_processor.sh  testing_tweeter.sh  theAppThatLetsUsProcessToomersCornerBeingRolled.cabal  tweet.sh
sample-data/: test.hs  testwhite.hs
testing-tools/: KEEP_THIS_FILE.txt  demo_controller.sh  intermitent-connection-scraper.sh  persistent-connection-scraper.sh  scrape.sh  test.hs  testwhite.hs
